<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegisterActivity2">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/et_white"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_username"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#B3000000" />

    <TextView
        android:id="@+id/tvUsernameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text=""
        android:textColor="@color/error"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_dark"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textFontWeight="600" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="35dp"
        android:text="@string/terms_and_conditions_label" />
</LinearLayout>