<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/et_white"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_email"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#B3000000" />

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text=""
        android:textColor="@color/error"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_white"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_password"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#B3000000" />

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text=""
        android:textColor="@color/error"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_dark"
        android:fontFamily="@font/poppins"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textFontWeight="600" />
</LinearLayout>